https://jirapct.epam.com/jira/browse/EPMLSOPELN-190 Add horizontal scroll for tabs. fixes

--- a/src/main/webapp/assets/styles/main.css
+++ b/src/main/webapp/assets/styles/main.css
@@ -130,6 +130,10 @@ body {
     animation: fadeIn 0.7s;
 }
 
+.tab-content.ng-enter {
+    animation: fadeIn 0.7s;
+}
+
 .templates-holder {
     min-height: 200px;
 }
